@@ -90,6 +90,8 @@ ResultFrame.rerun=Rerun this tab's SQL Query
 SQLResultExecuterPanel.executingFor=Elapsed execution time:
 SQLResultExecuterPanel.execMillis=milli seconds
 
+SQLResultExecuterPanel.numberOfRowsRead=Number of rows read:
+
 ResultTab.tableSearchNotSupported=Table search is not supported for this result display
 
 ResultTab.ColumnSearchNotSupported=Column search is not supported for this result display
