@@ -6,6 +6,8 @@ Not yet released, available in our GIT repository and in snapshots and future re
 
 Enhancements:
 
+SQL execution: When result rows are being read, the number of rows read is displayed below the elapsed execution time.
+
 Extension of keyboard shortcuts configuration: Existing default shortcuts can now also be removed instead of just replaced.
 
 Made most menu entries of the table's right mouse menu work with keyboard shortcuts.
